welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:28: error: value % is not a member of java.awt.Color
  mark(colors(0-offset)%getWorldHeight());
                       ^